welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: value ! is not a member of Boolean
while (estFaceMur()!){
                   ^Program:3: error: not found: value avancer
	avancer();
        ^